# Horatio

./: .gitignore  CMakeLists.txt
Source/: Horatio.cpp  Window.cpp  Window.h
lib/: CMakeLists.txt
lib/include/: Projection.h  Shader.h  Window.h
lib/include/Horatio/: Game.h  Projection.h  Window.h
lib/src/: Game.cpp  Projection.cpp  Projection.h  Shader.cpp  Shader.h  Window.cpp
res/: config.json
src/: TestGame.cpp  TestGame.h  main.cpp
